[tool.poetry]
name = "eval-hub"
version = "0.1.0"
description = "evaluation hub to share and discuss evaluation panels"
authors = ["amihai <amihai.offenbacher@voyantis.ai>"]
readme = "README.md"
packages = [{include = "eval_hub"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "1.3.5"
numpy = "1.21.0"
dash = "^2.16.1"
dash-mantine-components = "^0.12.1"
pytest = "^8.1.1"
flask = "^3.0.2"
plotly = "^5.20.0"
dash-iconify = "^0.1.2"
dash-summernote = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
